# Haskell-DirStream-Library

./: DirStream.hs  default.nix  dirstream.cabal  release.nix  shell.nix  stack.yaml
Data/: DirStream.hs
src/Data/: DirStream.hs
