Name: dirstream
Version: 1.0.0
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2013 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Dirstream-Library/issues
Synopsis: Easily stream directory contents in constant memory
Description: Use this library to read large directories as streams:
  .
  * Use @ListT@ to assemble recursive directory traversals while still streaming
  .
  * Use @pipes@ to read out the stream of results
  .
  * Traversals only open directory streams lazily in response to demand
  .
  * Avoid directories with insufficient permissions
Category: System, Pipes
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Dirstream-Library

Library
    Build-Depends:
        base       >= 4       && < 5  ,
        directory                < 1.3,
        filepath                 < 1.4,
        pipes      >= 4.0     && < 4.1,
        pipes-safe >= 2.0.0   && < 2.1,
        unix       >= 2.5.1.0 && < 2.7
    Exposed-Modules: DirStream
    GHC-Options: -O2
